S390X: Fix crashes after JDK-8284161 (Virtual Threads)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • b30
    • Verified

        Similar to other architectures, the S390X interpreter parts should not be entered with `!Continuations::enabled()`.

        Current builds on S390X crash with:

        05:51:17 Compiling 4 files for BUILD_JIGSAW_TOOLS
        05:51:26 Optimizing the exploded image
        05:51:26 #
        05:51:26 # A fatal error has been detected by the Java Runtime Environment:
        05:51:26 #
        05:51:26 # Internal Error (templateInterpreterGenerator_s390.cpp:486), pid=60413, tid=60418
        05:51:26 # Error: Unimplemented()
        05:51:26 #
        05:51:26 # JRE version: (19.0+25) (build )
        05:51:26 # Java VM: OpenJDK 64-Bit Server VM (19-beta+25-202206090332, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-s390x)
        05:51:26 # Problematic frame:
        05:51:26 # V [libjvm.so+0xaf9308] TemplateInterpreterGenerator::generate_Continuation_doYield_entry()+0x30

              Assignee:
              Tyler Steele
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: