8288128: S390X: Fix crashes after JDK-8284161 (Virtual Threads)

Reviewed-by: mdoerr